examples/test/testpolicy13259.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13259
  namespace: namespace267
spec:
  podSelector:
    matchLabels:
      key1: value36
      key8: value8
      key48: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value45
      podSelector:
        matchLabels:
          key19: value20
          key23: value47
          key16: value45
